fix warning after "8046148: JEP 158: Unified JVM Logging"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • svc
    • b89

        With gcc 4.1.2, we see
        logFileOutput.cpp:219: warning: negative integer implicitly converted to unsigned type
        logFileOutput.cpp:223: warning: negative integer implicitly converted to unsigned type

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: