8137260: fix warning after "8046148: JEP 158: Unified JVM Logging"

Reviewed-by: mlarsson, stuefe